--- a/pom.xml
+++ b/pom.xml
@@ -670,6 +670,18 @@
           <artifactId>build-helper-maven-plugin</artifactId>
           <version>${build-helper-maven-plugin.version}</version>
         </plugin>
+	 <plugin>
+         <groupId>org.codehaus.mojo</groupId>
+         <artifactId>cobertura-maven-plugin</artifactId>
+         <version>2.7</version>
+         <configuration>
+	   <formats>
+	     <format>xml</format>
+	     <format>html</format>
+	   </formats>
+	 </configuration>	   
+      </plugin>
+
         <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
@@ -696,7 +708,7 @@
               </pluginExecutions>
             </lifecycleMappingMetadata>
           </configuration>
-        </plugin>
+        </plugin> 
       </plugins>
     </pluginManagement>
   </build>
@@ -949,7 +961,7 @@
   <!-- ==================================================================== -->
   <properties>
     <!-- Plugin version numbers -->
-    <build-helper-maven-plugin.version>1.12</build-helper-maven-plugin.version>
+<build-helper-maven-plugin.version>1.12</build-helper-maven-plugin.version>
     <maven-assembly-plugin.version>2.5.5</maven-assembly-plugin.version>
     <maven-changes-plugin.version>2.11</maven-changes-plugin.version>
     <maven-checkstyle-plugin.version>2.16</maven-checkstyle-plugin.version>
