--- a/pom.xml
+++ b/pom.xml
@@ -342,6 +342,16 @@
     </resources>
     <!-- define build -->
     <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.13</version>
+            <configuration>
+                <includes>
+                    <include>**/ProgressAllTestsSuite.java</include>
+                </includes>
+            </configuration>
+        </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
